--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
   "name": "faculty-status-backend",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "cors": "^2.8.5",
+    "mongodb": "^6.3.0"
   }
 }
