--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,6 +9,10 @@
       "destination": "/control.html"
     },
     {
+      "source": "/admin",
+      "destination": "/admin.html"
+    },
+    {
       "source": "/api/:path*",
       "destination": "https://faculty-status-display.onrender.com/api/:path*"
     }
